# spotify-sorting-tool

./: .env.example  .gitignore  AGENTS.md  README.md  actions.py  app.py  auth.py  delete_liked_tracks.py  errors.py  liked_tracks.py  liked_tracks_operations.py  liked_tracks_remover.py  logging_config.py  main.py  media_library.py  playlist.py  playlist_manager.py  playlist_selection.py  playlist_track_adder.py  pyproject.toml  requirements.txt  search.py  transfer.py  ui.py  user_interface.py  workflow_factory.py
api/: client.py  errors.py  parsers.py  request_executor.py  types.py
liked_tracks/: deleter.py  finder.py  operations.py  reader.py
playlist/: selection.py  track_adder.py
src/spotify_manager/: __init__.py  app.py  auth.py  logging_config.py  main.py  ui.py
src/spotify_manager/api/: client.py  errors.py  parsers.py  request_executor.py  types.py
src/spotify_manager/liked_tracks/: deleter.py  finder.py  spotify_reader.py  spotify_remover.py
src/spotify_manager/playlist/: id_parser.py  manager.py  selection.py  track_adder.py
src/spotify_manager/workflows/: actions.py  delete_liked_tracks.py  factory.py  transfer_liked_tracks.py
workflows/: delete_liked_tracks.py  factory.py  transfer_liked_tracks.py
